syntax = "proto3";

package admin;

option java_multiple_files = true;
option java_package = "com.adia.admin";
option java_outer_classname = "AdminProto";

// Service d'administration
service AdminService {
  rpc SuspendUser (UserActionRequest) returns (UserActionResponse);
  rpc DeleteMessage (MessageActionRequest) returns (MessageActionResponse);
  rpc DeleteConversation (DltConversationRequest) returns (DltConversationResponse);
  //rpc DoCheck (CheckRequest) returns (CheckResponse);
}

message UserActionRequest {
  uint64 userId = 1;
  string reason = 3;
}

message UserActionResponse {
  bool success = 1;
  string message = 2;
}

// Messages pour la gestion des messages
message MessageActionRequest {
  uint64 messageId = 1;
  string reason = 3;
}

message MessageActionResponse {
  bool success = 1;
  string message = 2;
}

message DltConversationRequest {
  uint64 conversationId = 1;
}

message DltConversationResponse {
  bool success = 1;
  string message = 2;
}

