syntax = "proto3";

package user;

option java_multiple_files = true;
option java_package = "com.adia.user";
option java_outer_classname = "UserProto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc GetUserStats(Empty) returns (UserStatsResponse);
  rpc SearchUsers(SearchReq) returns (SearchRes);

  rpc SuspendUser(SuspendUserRequest) returns (SuspendUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);

  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc VerifyPassword(VPasswordReq) returns (VPasswordRes); 
}

message SearchReq {
  string searchTerm = 1;
}

message SearchRes {
  repeated User users = 1;
}

message User {
  uint64 id = 1;
  string username = 2;
  string email = 3;
  bool isAdmin = 4;
  bool isEmailVerified = 5;
  bool isActivated = 6;
  bool isSuspended = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  bool isAdmin = 4;
  bool isEmailVerified = 5;
  bool isActivated = 6;
  bool isSuspended = 7;
}

message GetUserRequest {
  uint64 id = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message UpdateUserRequest {
  uint64 id  = 1;
  string username = 2;
  string email = 3;
  bool isAdmin = 4;
  bool isEmailVerified = 5;
  bool isActivated = 6;
  bool isSuspended = 7;
}

message Empty {}

message ListUsersRequest {
  int32 page = 1;
  int32 limit = 2;
  string search = 3;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  bool success = 3;
  string message = 4;
}

message UserResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

message VPasswordReq {
  string email = 1;
  string password = 2; 
}

message VPasswordRes {
  string message = 1;
  bool success = 2; 
}

message UserStatsResponse {
  int32 total = 1;
  int32 active = 2;
  int32 suspended = 3;
  int32 unverified = 4;
  bool success = 5;
  string message = 6;
}

// Request and Response for suspending a user
message SuspendUserRequest {
  string user_id = 1;
}

message UserActionRequest {
  string userId = 1;
  string adminId = 2;
  string reason = 3;
}

message UserActionResponse {
  bool success = 1;
  string message = 2;
}

message SuspendUserResponse {
  bool success = 1;
  string message = 2;
}

// Request and Response for deleting a user
message DeleteUserRequest {
  string user_id = 1;
}
message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}